Correctly Align Ratings Buttons

--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ body {
     background-color: hsl(216, 12%, 24%);
     border: none;
     padding: 1rem;
-    margin: 1rem .8rem;
+    margin: 1rem .2rem;
     border-radius: 50%;
     color: hsl(0, 0%, 100%);
     cursor: pointer;
